--- a/install/installer/index.css
+++ b/install/installer/index.css
@@ -1,4 +1,19 @@
 ﻿/* reset */
+
+
+@font-face {
+    font-family: 'print';
+    src: url('http://universeos.org/inc/fonts/printclearly-webfont.eot');
+    src: url('http://universeos.org/inc/fonts/printclearly-webfont.eot?#iefix') format('embedded-opentype'),
+         url('http://universeos.org/inc/fonts/printclearly-webfont.woff') format('woff'),
+         url('http://universeos.org/inc/fonts/printclearly-webfont.ttf') format('truetype'),
+         url('http://universeos.org/inc/fonts/printclearly-webfont.svg#print_clearlyregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 * {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -20,15 +35,11 @@ color: #FFFFFF;
 	font-style: normal;
 	line-height: 1.333em;
 	font-weight: 200!important;
-	font-size: 16px;
+	font-size: 18px;
 	font-variant: normal;
 	word-wrap: break-word;
 	margin: 0;
 	padding:0;
-	/*background-image: url(../../gfx/bg/1.jpg);
-    background-attachment: no-repeat;
-    background-position:top left;
-	background-repeat:no-repeat;*/
 	background:
 	radial-gradient(black 15%, transparent 16%) 0 0,
 	radial-gradient(black 15%, transparent 16%) 8px 8px,
@@ -39,40 +50,96 @@ color: #FFFFFF;
 	/*http://lea.verou.me/css3patterns/#carbon-fibre*/
 }
 
-
-/* -------------- navigavtion------------- */
-nav {
-	width: 100%;
-	position: fixed;
-	top: 0%;
-	height: 5%;
-	min-height:5%;
-	background-color: #000;
+input[type=checkbox]{
+	margin-bottom: 6px;
 }
 
-/* ----------------- content--------------------- */
-
+input[type=text]{
+	margin-bottom: 3px;width: 250px;
+}
 
 section#content {
-	-moz-border-radius:1px;
-	-webkit-border-radius:1px;
-	border-radius:1px;
+	-moz-border-radius: 1px;
+	-webkit-border-radius: 1px;
+	border-radius: 1px;
 	background: rgba(255,255,255,0.9);
-	margin-left: 20%;
-	margin-right: 20%;
-	margin-top: 10%;
-	margin-bottom: 10%;
+	color: #454545;
+	position: absolute;
+	width: 500px;
+	left: 50%;
+	top: 100px;
+	margin-left: -250px;
 }
 
+#content header{
+	color: #454545;
+	height: 37px;
+	padding: 0px 5px;
+	font-size: 16pt;
+	white-space: nowrap;
+	background: #c9c9c9;
+	text-shadow: 1px 1px 1px #e8e8e8;
+	filter: dropshadow(color=#e8e8e8, offx=1, offy=1);
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+
+#content h1,h2,h3,h4{
+	margin: 0;
+	line-height:auto;
+	
+}
+
+#content .content tr{
+	height: 30px;
+}
+#content .content tr td h4{
+	text-align:left;
+}
+#content .content tr td:first-of-type{
+	text-align: right;
+	padding-right:10px;
+	width:200px;
+	text-align: right;
+	padding-right: 10px;
+	width: 150px;
+}
+
+#content .content{
+	margin: 0 5px;
+	margin-top: 50px;
+	margin-bottom:50px;
+}
+
+#content .controlBar{
+	position: absolute;
+	left: 2px;
+	right: 2px;
+	bottom: 22px;
+	
+}
+
+#content footer{
+position: absolute;
+bottom: 0;
+left: 0;
+right: 0;
+}
 
 /* -----------footer--------------------------- */
-footer { border-top: 1px solid #333; }
+footer { 
+	border-top: 1px solid #D6D6D6;
+	padding: 0px 5px;
+	height: 20px;
+}
 
 .imgcenter {
-display: block;
-width:100%;
-text-align: center;
-margin-top: 1%;
+	display: block;
+	width:100%;
+	text-align: center;
+	margin-top: 1%;
 }
 
 dock{
