--- a/inc/css/out.css
+++ b/inc/css/out.css
@@ -1,7 +1,21 @@
 
+
+		@font-face {
+		    font-family: 'print';
+		    src: url('../inc/fonts/printclearly-webfont.eot');
+		    src: url('../inc/fonts/printclearly-webfont.eot?#iefix') format('embedded-opentype'),
+		         url('../inc/fonts/printclearly-webfont.woff') format('woff'),
+		         url('../inc/fonts/printclearly-webfont.ttf') format('truetype'),
+		         url('../inc/fonts/printclearly-webfont.svg#print_clearlyregular') format('svg');
+		    font-weight: normal;
+		    font-style: normal;
+		
+		}
+		
+		
         body{
         background:#ffffff;
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-family: "print", Helvetica, Arial, sans-serif;
 		font-size: 14px;
 		line-height: 20px;
 		color: #333333;
@@ -79,6 +93,7 @@
 		}
 		
 
+	
 	.openFile header{
 		height:40px;
 		padding-top: 0px;
@@ -88,40 +103,31 @@
 	.openFile header > img{
 		float: left;
 		margin-top: 10px;
+		margin-left: 5px;
 	}
 	
 	.openFile header .title{
-		float:left;
+		float: left;
 		font-size: 16pt;
-		margin-top: 10px;
+		margin-top: 7px;
 		margin-left: 5px;
-		overflow:hidden;
+		overflow: hidden;
 		max-width: 30%;
 		line-height: 30px;
 		height: 30px;
+		vertical-align: bottom;
 	}
 	.openFile header span{
 		float:right;
 		margin-top: 9px;
 		margin-right:5px;
 	}
-	
-	.openFile header .download{
-		margin-top:12px;
-	}
-	
-	.openFile header .download img{
-		margin: 1.5px;
-	}
 
-	.readerImageTab{
-	    position: absolute;
-	    top: 40px;
-	    right: 0px;
-	    bottom: 100px;
-	    left: 0px;
-	    overflow: auto;
-	    background: #000000;
+	.openFile .fileWindow{
+		position: absolute;
+		top: 39px;
+		bottom: 0px;
+		overflow: auto;
 	}
             .uffViewerMain{
                 position: absolute;
