--- a/inc/css/guest.css
+++ b/inc/css/guest.css
@@ -103,6 +103,14 @@
 		border-top: none;
 		margin-top: -1px;
     }
+    
+    #regLoad{
+    	display:none;margin-top: 20px;
+		margin-right: 20px;
+		color: #FFFFFF;
+		max-width:150px;
+		text-align:left;
+    }
 /*registration end*/
     
 #startbox {
@@ -110,7 +118,6 @@
 	    bottom: 40px;
 	    left: 0px;
 	    height: 150px;
-	    width: 460px;
 	    background: #3a3a3a; /* Old browsers */
 		background: -moz-linear-gradient(top, #3a3a3a 0%, #303030 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3a3a3a), color-stop(100%,#303030)); /* Chrome,Safari4+ */
@@ -184,3 +191,37 @@
 				width 20px;
 				margin-bottom: -5px;
 			}
+			
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
+			#topThing, #guestInfoBox, #betaBox{
+				display:none;
+			}
+			
+			#bodyWrap{
+				top:5px;
+			}
+			
+			#startMainHeader {
+				width: 320px;
+			}
+			
+			#loginForm input[type=text], #loginForm input[type=password]{
+				max-width: 120px;
+			}
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+}
