--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -781,6 +781,12 @@ background: #383838;
     
 }
 
+#realFeed {
+margin: 5px;
+margin-bottom: 20px;
+border: 1px solid rgba(0,0,0,0.05);
+}
+
 #feedInput{
 	width: 86%;
 	margin-left: 7%;
@@ -864,6 +870,54 @@ background: #383838;
 	padding: 0;
 }
 
+.shareList{
+	width: 100%;
+}
+
+.shareList li{
+	width: 32%;
+	height: 30px;
+	border-left: 1px solid #4f85bb;
+	border-bottom: 1px solid #4f85bb;
+	background: #7A9BBD;
+	float: left;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 5px;
+	font-size: 20px;
+	cursor:pointer;
+}
+
+.shareList li:hover, .shareList .active{
+	background-color: #607F9E;
+}
+
+.shareList li img{
+	height: 20px;
+	float:right;
+}
+
+.shareBox{
+	clear:both;
+	margin-top: 80px;
+}
+
+.shareBox li{
+	display:none;
+	padding: 30px;
+	background: rgba(255,255,255,0.4);
+	border: 1px dotted #c9c9c9;
+}
+
+.shareBox textarea{
+	width: 100%;
+	height: 30px;
+}
+
+.shareBox .btn img{
+	margin-bottom: -5px;
+}
 /* reader */
 
 
@@ -2038,9 +2092,12 @@ del.bar{
 .commentRow{
     background: #ededed;
     height: 37px;
-	padding-top: 10px;
+	padding: 10px 5px;
 }
 
+.commentRow input[type=submit]{
+	margin-top:-2px;
+}
 
 .comment{
     margin: 20px;
@@ -2181,6 +2238,9 @@ font-family:"Courier New", Courier, monospace;
     margin-bottom: -22;
 }
 
+.changePassword{
+	display:none;
+}
 
 
 
@@ -2553,3 +2613,198 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
  				.privacySettings .groupList li > div:last-of-type{
  					
  				}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
+.module{
+	min-width: 60px;
+}
+
+#clockDiv{
+	display:none;
+}
+
+#searchField{
+	width:115px;
+}
+
+}
+
+#circularG{
+position:relative;
+width:100px;
+height:100px}
+
+.circularG{
+position:absolute;
+background-color:#424242;
+width:23px;
+height:23px;
+-moz-border-radius:15px;
+-moz-animation-name:bounce_circularG;
+-moz-animation-duration:1.6s;
+-moz-animation-iteration-count:infinite;
+-moz-animation-direction:linear;
+-webkit-border-radius:15px;
+-webkit-animation-name:bounce_circularG;
+-webkit-animation-duration:1.6s;
+-webkit-animation-iteration-count:infinite;
+-webkit-animation-direction:linear;
+-ms-border-radius:15px;
+-ms-animation-name:bounce_circularG;
+-ms-animation-duration:1.6s;
+-ms-animation-iteration-count:infinite;
+-ms-animation-direction:linear;
+-o-border-radius:15px;
+-o-animation-name:bounce_circularG;
+-o-animation-duration:1.6s;
+-o-animation-iteration-count:infinite;
+-o-animation-direction:linear;
+border-radius:15px;
+animation-name:bounce_circularG;
+animation-duration:1.6s;
+animation-iteration-count:infinite;
+animation-direction:linear;
+}
+
+#circularG_1{
+left:0;
+top:39px;
+-moz-animation-delay:0.6s;
+-webkit-animation-delay:0.6s;
+-ms-animation-delay:0.6s;
+-o-animation-delay:0.6s;
+animation-delay:0.6s;
+}
+
+#circularG_2{
+left:11px;
+top:11px;
+-moz-animation-delay:0.8s;
+-webkit-animation-delay:0.8s;
+-ms-animation-delay:0.8s;
+-o-animation-delay:0.8s;
+animation-delay:0.8s;
+}
+
+#circularG_3{
+top:0;
+left:39px;
+-moz-animation-delay:1s;
+-webkit-animation-delay:1s;
+-ms-animation-delay:1s;
+-o-animation-delay:1s;
+animation-delay:1s;
+}
+
+#circularG_4{
+right:11px;
+top:11px;
+-moz-animation-delay:1.2s;
+-webkit-animation-delay:1.2s;
+-ms-animation-delay:1.2s;
+-o-animation-delay:1.2s;
+animation-delay:1.2s;
+}
+
+#circularG_5{
+right:0;
+top:39px;
+-moz-animation-delay:1.4s;
+-webkit-animation-delay:1.4s;
+-ms-animation-delay:1.4s;
+-o-animation-delay:1.4s;
+animation-delay:1.4s;
+}
+
+#circularG_6{
+right:11px;
+bottom:11px;
+-moz-animation-delay:1.6s;
+-webkit-animation-delay:1.6s;
+-ms-animation-delay:1.6s;
+-o-animation-delay:1.6s;
+animation-delay:1.6s;
+}
+
+#circularG_7{
+left:39px;
+bottom:0;
+-moz-animation-delay:1.8s;
+-webkit-animation-delay:1.8s;
+-ms-animation-delay:1.8s;
+-o-animation-delay:1.8s;
+animation-delay:1.8s;
+}
+
+#circularG_8{
+left:11px;
+bottom:11px;
+-moz-animation-delay:2s;
+-webkit-animation-delay:2s;
+-ms-animation-delay:2s;
+-o-animation-delay:2s;
+animation-delay:2s;
+}
+
+@-moz-keyframes bounce_circularG{
+0%{
+-moz-transform:scale(1)}
+
+100%{
+-moz-transform:scale(.3)}
+
+}
+
+@-webkit-keyframes bounce_circularG{
+0%{
+-webkit-transform:scale(1)}
+
+100%{
+-webkit-transform:scale(.3)}
+
+}
+
+@-ms-keyframes bounce_circularG{
+0%{
+-ms-transform:scale(1)}
+
+100%{
+-ms-transform:scale(.3)}
+
+}
+
+@-o-keyframes bounce_circularG{
+0%{
+-o-transform:scale(1)}
+
+100%{
+-o-transform:scale(.3)}
+
+}
+
+@keyframes bounce_circularG{
+0%{
+transform:scale(1)}
+
+100%{
+transform:scale(.3)}
+
+}
+
+
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+}
