--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -189,6 +189,10 @@ li.notHidden{
 
 
 /* search */
+.dockSeachResult .userPicture {
+	margin: 1px 5px;
+}
+
 .suggestionList:empty,
                 .suggestionList:empty + header {
                     display: none;
@@ -336,17 +340,17 @@ font-size: 19px;
 	margin-top: 20px;
 }
 
-.formTable tr td:first-of-type{
+.formTable>tr>td:first-of-type{
 	text-align: right;
 	vertical-align: top;
 	width: 85px;
 	padding-right: 10px;
 	font-size: 21px;
 }
-.formTable tr td{
+.formTable>tr>td{
     line-height: 31px;
 }
-.formTable tr{
+.formTable>tr{
 	height: 35px;
 }
 
@@ -1598,15 +1602,16 @@ color:#FFFFFF;
         
         
         #searchField{
-            position: absolute;
-            right: 4px;
-            bottom: -4.5px;
-            width: 180px;
-            height: 20px;
-            font-size: 12pt;
-            -webkit-border-radius: 22px;
-            -moz-border-radius: 22px;
-            border-radius: 22px;
+           border-radius: 22px;
+bottom: -3px;
+font-size: 22px;
+height: 24px;
+position: absolute;
+right: 7px;
+vertical-align: bottom;
+text-align: right;
+width: 180px;
+padding: 0px 6px;
             
         }    
         
@@ -2418,11 +2423,12 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 
 	#systemAlerts{
 		position: absolute;
-		bottom: 0px;
+		bottom: 2px;
 		left: 0;
 	}
 	
 	#systemAlerts li{
+		z-index: 99999;
 		font-size: 23px;
 		position: relative;
 		background: rgba(50,50,50,0.9);
@@ -2451,12 +2457,53 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 		width: 70px;
 	}
 
+	#dashGrid{
+		position: absolute;
+		top: -190px;
+		right: 0;
+		left: 0;
+		height: 390px;
+	}
+
 	#dashBoard{
-		top: 0;
+		top: -190px;
 		z-index: 99999;
 		position: absolute;
-		height: 10px;
+		height: 179px;
+		padding: 10px;
 		right: 5px;
+		left: 0;
+		right: 0;
+                    background: #303030; /* Old browsers */
+                    background: -moz-linear-gradient(top, #303030 0%, #212121 100%); /* FF3.6+ */
+                    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#303030), color-stop(100%,#212121)); /* Chrome,Safari4+ */
+                    background: -webkit-linear-gradient(top, #303030 0%,#212121 100%); /* Chrome10+,Safari5.1+ */
+                    background: -o-linear-gradient(top, #303030 0%,#212121 100%); /* Opera 11.10+ */
+                    background: -ms-linear-gradient(top, #303030 0%,#212121 100%); /* IE10+ */
+                    background: linear-gradient(to bottom, #303030 0%,#212121 100%); /* W3C */
+                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303030', endColorstr='#212121',GradientType=0 ); /* IE6-9 */
+		-moz-box-pack: center;
+		-moz-box-align: center;
+		display: -webkit-box;
+		-webkit-box-pack: center;
+		-webkit-box-align: center;
+		display: box;
+		box-pack: center;
+		box-align: center;                 
+	}
+	
+	#dashBoard.up{
+		top: 0;
+margin: 0;
+	}
+	
+	#dashBoard footer{
+		position: absolute;
+		bottom: 0;
+		text-align: center;
+		left: 0;
+		right: 0;
+		margin-bottom: -8px;
 	}
 	
 	.dashBox:hover .content{
@@ -2467,23 +2514,28 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	.dashBox:hover footer{
 		display: block;
 	}
+	
+	.dashBox:first-of-type{
+		-webkit-box-shadow: inset 5px 5px 9px 12px rgba(0, 0, 0, 0.35); /* WebKit */
+		-moz-box-shadow: inset 5px 5px 9px 12px rgba(0, 0, 0, 0.35); /* Firefox */
+		box-shadow: inset 5px 5px 9px 12px rgba(0, 0, 0, 0.35); /* Standard */
+	}
 
 	.dashBox{
-		color: #474747;
+		color: rgba(115, 115, 115, 1);
 		font-size: 15pt;
 		width: 170px;
-		border-radius: 1px;
-		background: #fff9f0;
-		margin: 5px 0px 30px 5px;
+		background: #323232;
+		margin: 0;
 		position: relative;
 		float: left;
+		height: 180px;
 	}
 	
 	.dashBox .content{
 		overflow: auto;
-		max-height: 100%;
-		min-height: 100px;
-		display: none;
+height: 144px;
+border-left: 1px solid #424242;
 	}
 	
 	.dashBox header{
@@ -2497,7 +2549,9 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 		padding-top: 10px;
 		background: #3f72a6;
 		border-bottom: none;
-	}
+		background: #212121;
+		
+    }
 	
 	.dashBox footer{
 		position: absolute;
@@ -2505,9 +2559,10 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 		left: 0px;
 		right: 0px;
 		height: 15px;
-		display:none;
-		background: #f6f1ea;
-		border-top: 1px solid #ede3d5;
+		background: #2A2A2A;
+		border: #424242 1px solid;
+		border-right: none;
+		margin-bottom: 0!important;
 	}
 	
 	.dashBox footer a:first-of-type{
@@ -2519,7 +2574,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	}
 	
 	.dashBox > div, .dashBox > ul {
-		padding: 3px;
+		/*padding: 3px;*/
 	}
 	
 	.dashBox .dashClose{
@@ -2533,7 +2588,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 		margin-top: 1px;
 		line-height: 14px;
 		vertical-align: text-top;
-		
+		display: none;
 		cursor: pointer;
 	}
 	
@@ -2576,7 +2631,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
                     border-right: none;
                 }
             
-                #dashBoard .appList > li{
+                #dashBoard li{
                     background: #303030; /* Old browsers */
                     background: -moz-linear-gradient(top, #303030 0%, #212121 100%); /* FF3.6+ */
                     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#303030), color-stop(100%,#212121)); /* Chrome,Safari4+ */
@@ -2589,22 +2644,25 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
                     padding-top: 12px;
                     padding-bottom: 12px;
                     margin-left: 0px;
-                    color: rgba(241, 241, 241, 0.15)
+                    color: rgba(115, 115, 115, 1)
                     border: 0px;
                     border-top: #424242 1px solid;
-                    border-left: #424242 1px solid;
-                   	width: 153px;
+                   	width: 159px;
                     cursor:pointer;
                     float:left;
                     font-size: 25px;
                 }
+                
+                #dashBoard a:link, #dashBoard a:visited{
+					color:rgba(115, 115, 115, 1);
+									}
                 
                 #dashBoard .appList > li > img{
                     margin-right:5px;
                     margin-left:5px;
                     width:15px;
                 }
-                #dashBoard .appList > li:hover{
+                #dashBoard li:hover{
                     background: #303030;
                 }
                 .privacySettings{
