big commit with lot of fixes

--- a/inc/css/plugins.css
+++ b/inc/css/plugins.css
@@ -2917,7 +2917,7 @@ table th[class*="span"],
   clear: both;
   font-weight: normal;
   line-height: 20px;
-  color: #333333;
+  color: #333333!important;
   white-space: nowrap;
 }
 
