--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -58,7 +58,7 @@ h3{
 	z-index:1;
 	background: rgba(255,255,255,0.9);
 	min-width: 250px;
-	min-height: 130px;
+	min-height: 260px;
 }
 .fenster > header {
     color:#454545;
@@ -1404,12 +1404,12 @@ color:#FFFFFF;
 }
 
 #bodywrap {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 41px;
-    left: 0px;
-    overflow: hidden;
+	position: absolute;
+	top: 11px;
+	right: 1px;
+	bottom: 41px;
+	left: 1px;
+	overflow: hidden;
 }
 
 #alerter{
@@ -2489,6 +2489,16 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
                     background: -ms-linear-gradient(top, #303030 0%,#212121 100%); /* IE10+ */
                     background: linear-gradient(to bottom, #303030 0%,#212121 100%); /* W3C */
                     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303030', endColorstr='#212121',GradientType=0 ); /* IE6-9 */
+
+
+					background: #212121; /* Old browsers */
+					background: -moz-linear-gradient(top, #212121 0%, #262626 49%, #212121 100%); /* FF3.6+ */
+					background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#212121), color-stop(49%,#262626), color-stop(100%,#212121)); /* Chrome,Safari4+ */
+					background: -webkit-linear-gradient(top, #212121 0%,#262626 49%,#212121 100%); /* Chrome10+,Safari5.1+ */
+					background: -o-linear-gradient(top, #212121 0%,#262626 49%,#212121 100%); /* Opera 11.10+ */
+					background: -ms-linear-gradient(top, #212121 0%,#262626 49%,#212121 100%); /* IE10+ */
+					background: linear-gradient(to bottom, #212121 0%,#262626 49%,#212121 100%); /* W3C */
+					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#212121', endColorstr='#212121',GradientType=0 ); /* IE6-9 */
 		-moz-box-pack: center;
 		-moz-box-align: center;
 		display: -webkit-box;
@@ -2514,9 +2524,13 @@ margin: 0;
 	}
 	
 	#dashBoxFrame{
-		max-width:1000px;
+		max-width:700px;
 		overflow-x:auto;
 		overflow-y:hidden;
+	}
+	
+	#dashBoxFrame{
+		min-width:1000px;
 	}
 	
 	.dashBox:hover .content{
@@ -2539,8 +2553,8 @@ margin: 0;
 		font-size: 15pt;
 		width: 170px;
 		background: #323232;
-		margin: 0;
-		position: relative;
+		margin: 0 4px;
+				position: relative;
 		float: left;
 		height: 180px;
 	}
@@ -2549,20 +2563,21 @@ margin: 0;
 		overflow: auto;
 height: 144px;
 border-left: 1px solid #424242;
+border-right: 1px solid #424242;
 	}
 	
 	.dashBox header{
 		padding: 5px;
-		font-size: 16pt;
-		line-height: 15px;
-		text-align: right;
-		height: 12px;
-		border-bottom: 2px solid #3a3a3a;
-		color: #FFF;
-		padding-top: 10px;
-		background: #3f72a6;
-		border-bottom: none;
-		background: #212121;
+font-size: 16pt;
+line-height: 15px;
+text-align: right;
+height: 12px;
+border-bottom: 2px solid #3a3a3a;
+color: #9D9D9D;
+padding-top: 10px;
+background: #3f72a6;
+border-bottom: none;
+background: #4D4545;
 		
     }
 	
@@ -2571,11 +2586,11 @@ border-left: 1px solid #424242;
 		bottom: 0px;
 		left: 0px;
 		right: 0px;
-		height: 15px;
+		height: 23px;
 		background: #2A2A2A;
 		border: #424242 1px solid;
-		border-right: none;
 		margin-bottom: 0!important;
+		border-top: 0;
 	}
 	
 	.dashBox footer a:first-of-type{
@@ -2645,25 +2660,24 @@ border-left: 1px solid #424242;
                 }
             
                 #dashBoard li{
-                    background: #303030; /* Old browsers */
-                    background: -moz-linear-gradient(top, #303030 0%, #212121 100%); /* FF3.6+ */
-                    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#303030), color-stop(100%,#212121)); /* Chrome,Safari4+ */
-                    background: -webkit-linear-gradient(top, #303030 0%,#212121 100%); /* Chrome10+,Safari5.1+ */
-                    background: -o-linear-gradient(top, #303030 0%,#212121 100%); /* Opera 11.10+ */
-                    background: -ms-linear-gradient(top, #303030 0%,#212121 100%); /* IE10+ */
-                    background: linear-gradient(to bottom, #303030 0%,#212121 100%); /* W3C */
-                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303030', endColorstr='#212121',GradientType=0 ); /* IE6-9 */
-                    padding: 5px;
-                    padding-top: 12px;
-                    padding-bottom: 12px;
-                    margin-left: 0px;
-                    color: rgba(115, 115, 115, 1)
-                    border: 0px;
-                    border-top: #424242 1px solid;
-                   	width: 159px;
-                    cursor:pointer;
-                    float:left;
-                    font-size: 25px;
+					background: #303030;
+					background: -moz-linear-gradient(top, #303030 0%, #212121 100%);
+					background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#303030), color-stop(100%,#212121));
+					background: -webkit-linear-gradient(top, #303030 0%,#212121 100%);
+					background: -o-linear-gradient(top, #303030 0%,#212121 100%);
+					background: -ms-linear-gradient(top, #303030 0%,#212121 100%);
+					background: linear-gradient(to bottom, #303030 0%,#212121 100%);
+					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303030', endColorstr='#212121',GradientType=0 );
+					padding: 5px;
+					padding-top: 12px;
+					padding-bottom: 12px;
+					margin-left: 0px;
+					color: rgba(115, 115, 115, 1) border: 0px;
+					border-top: #3C3C3B 1px solid;
+					width: 159px;
+					cursor: pointer;
+					float: left;
+					font-size: 25px;
                 }
                 
                 #dashBoard a:link, #dashBoard a:visited{
@@ -2766,6 +2780,11 @@ border-left: 1px solid #424242;
  					
  				}
 /*calendar*/
+			#calendarFenster{
+				left: 50px;
+				top: 50px;
+				height: 80%;
+			}
 
 			#calendarFenster .inhalt{
 				background-color: #3E3E3E;
@@ -2798,14 +2817,9 @@ border-left: 1px solid #424242;
 				width: 65px;
 			}
 			
-			#calendar #main:hover header{
-				display:block;
-			}
-			
 			#calendar #main>header{
-				display:none;
 				height: 25px;
-				background: rgba(75, 73, 73,0.3);
+				background: rgba(75, 73, 73,0.2);
 				color:#FFFFFF;
 				position: absolute;
 				top: 0;
@@ -2817,7 +2831,8 @@ border-left: 1px solid #424242;
 			#calendar #main>header span{
 				width: 14.2857%;
 				float:left;
-				padding-left: 1px;
+				padding-left: 5px;
+				padding-top: 3px;
 				box-sizing: border-box;
 			}
 			
@@ -2868,14 +2883,16 @@ border-left: 1px solid #424242;
 				font-size: 11px;
 				
 			}
+			
 		
 			.calendarFrame{
 				position: absolute;
-				top: 0;
+				top: 25px;
 				right: 0;
 				bottom: 0;
 				left: 0;
 				overflow: auto;
+				color: #747474;
 			}
 			
 			.calendarFrame.weekView.boxes .day{
@@ -2905,8 +2922,8 @@ border-left: 1px solid #424242;
 			.calendarFrame.boxes .day{
 				width: 14.2857%;
 				float: left;
-				border-right: 1px solid #c9c9c9;
-				border-bottom: 1px solid #c9c9c9;
+				border-right: 1px solid #EFEFEF;
+				border-bottom: 1px solid #EFEFEF;
 				box-sizing: border-box;
 				background: #FFFFFF;
 			}
@@ -2921,8 +2938,28 @@ border-left: 1px solid #424242;
 				display:block;
 			}
 			
+			.calendarFrame .day .dropdown.open{
+				display:block;
+			}
+			
 			.calendarFrame .day header .dropdown{
 				display:none;
+			}
+			
+			.day .dropdown-menu li .header{
+				font-size: 17px;
+				margin: 0px 15px;
+				padding: 4px 0 0px 4px;
+				cursor: default;
+				font-weight: bold;
+			}
+			.day .dropdown-menu li{
+				font-size: 15px;
+				text-align:left;
+			}
+			
+			.day .dropdown-menu li .header:hover{
+				background:#FFFFFF;
 			}
 			
 			.calendarFrame .day.today header{
@@ -2986,7 +3023,7 @@ border-left: 1px solid #424242;
 				color: #FFFFFF;
 				font-size: 17px;
 				background: #8AD361;
-				cursor:pointer;
+				position:relative;
 			}
 			
 			.calendarFrame .day .eventList li.eventDetail, .calendarFrame .day .eventList li.taskDetail{
@@ -2998,6 +3035,13 @@ border-left: 1px solid #424242;
 				line-height: 15px;
 				padding: 4px;
 				padding-top: 6px;
+			}
+			
+			.calendarFrame .day .eventList .caret{
+				position: absolute;
+				right: 5px;
+				bottom: 5px;
+				cursor:pointer;
 			}
 			
 			/*set color for tasks*/
