--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -2779,6 +2779,49 @@ background: #4D4545;
  				.privacySettings .groupList li > div:last-of-type{
  					
  				}
+/*usersuggestion input (list of buddies with input=text and taggs)*/
+
+
+			.inputTagBar{
+				background: #FFFFFF!important;
+				width: 100%;
+				height: 28px;
+				color: #000;
+				margin-bottom: 6px;
+			}
+			
+			.inputTagBar li{
+				width: auto;
+				height: 20px;
+				background: #c9c9c9;
+				color: #FFFFFF;
+				border-radius: 3px;
+				display: block;
+				float: left;
+				margin: 2px;
+				padding: 2px;
+			}
+			
+			.userTagSearch{
+				margin-top:2px;
+			}
+			
+			.inputTagSuggestions{
+				display:none;
+				position;absolute;
+				background:#FFF;
+				height: 50px;
+				overflow: auto;
+				color: #000;
+				margin-top: 1px;
+				width:206px;
+			}
+			
+			.inputTagSuggestions li{
+				border-bottom: #c9c9c9 1px solid;
+				height: 26px;
+				line-height: 35px;
+			}
 /*calendar*/
 			#calendarFenster{
 				left: 50px;
