--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -2784,7 +2784,7 @@ background: #4D4545;
 
 			.inputTagBar{
 				background: #FFFFFF!important;
-				width: 100%;
+				width: 220px;
 				height: 28px;
 				color: #000;
 				margin-bottom: 6px;
@@ -2803,24 +2803,32 @@ background: #4D4545;
 			}
 			
 			.userTagSearch{
-				margin-top:2px;
+				margin-top: -5px!important;
+				
 			}
 			
 			.inputTagSuggestions{
-				display:none;
-				position;absolute;
-				background:#FFF;
-				height: 50px;
+				display: none;
+				background: #FFF;
+				max-height: 50px;
 				overflow: auto;
 				color: #000;
-				margin-top: 1px;
-				width:206px;
+				margin-top: -9px;
+				width: 220px;
 			}
 			
 			.inputTagSuggestions li{
 				border-bottom: #c9c9c9 1px solid;
-				height: 26px;
-				line-height: 35px;
+				height: 25px;
+				line-height: 28px;
+				font-size: 19px;
+				cursor: pointer;
+			}
+			
+			.inputTagSuggestions li .userPicture{
+				margin-top: 1px;
+				margin-left: 1px;
+				margin-right: 3px;
 			}
 /*calendar*/
 			#calendarFenster{
@@ -3092,6 +3100,64 @@ background: #4D4545;
 				background: #F4C540;
 			}
 /*calendar end*/
+
+
+/*browser start*/
+		.browser{
+			position:absolute;
+			top: 0px;
+			right: 0px;
+			bottom: 0px;
+			left: 0px;
+		}
+		
+		.browser header{
+			height: 25px;
+			background: #c9c9c9;
+			position: absolute;
+			top: 0px;
+			right: 0px;
+			left: 0px;
+			padding: 5px;
+			overflow: auto;
+		}
+		
+		.browser header form{
+			margin:0px;
+		}
+		
+		
+		.browser header span{
+			float:left;
+		}
+		
+		.browser header input{
+			float: left;
+			height: 15px;
+			padding: 5px 5px 2px 5px;
+			margin-left: 5px;
+			min-width: 400px;
+		}
+		
+		.browser div{
+			
+			position:absolute;
+			top: 35px;
+			right: 0px;
+			bottom: 0px;
+			left: 0px;
+		}
+		
+		.browser iframe{
+			width:100%;
+			height:100%;
+		}
+		
+		.browser footer{
+			display: none;	
+		}
+/*browser end*/
+
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
