--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -77,8 +77,8 @@ h3{
 	margin-bottom:0px;
 }
 
-.windowHead{
-    
+.greyHover:hover, .greyHover .active{
+    background: #eee;
 }
 
 /*defines content of a window with overflow auto - etc.*/
@@ -811,11 +811,31 @@ border-bottom: 1px solid #292929;
 }
 
 #feedInput{
-	width: 86%;
-	margin-left: 7%;
-	margin-bottom: 0px; 
-	height: 20px;
-	resize: none;
+	position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 200px;
+        height: 40px;
+        font-size: 25px;
+        padding: 8px;
+        resize: none;
+}
+
+#feedInputBar{
+    position: absolute;
+    top: 55px;
+    right: 10px;
+    width: 195px;
+}
+
+#feedInputBar input[type=submit]{
+    background-color: #006d67;
+    width: 80px;
+    height: 35px;
+    float: right;
+    border-radius: 0;
+    color: #FFF;
+    padding: 2px;
 }
 
 #feedTable { 
@@ -2657,6 +2677,17 @@ margin: 0;
                 #dashBoard li:hover{
                     background: #303030;
                 }
+                
+                .privacyButton{
+                    display: inline-block;
+                    padding: 6px 15px;
+                    border-width: 1px;
+                    border-color: #a0a0a0;
+                    border-style: solid;
+                    width: 75px;
+                    height: 35px;
+                }
+                
                 .privacySettings{
                 	background: #3E3E3E;
                 	border: 1px solid #c9c9c9;
